# tsoa/swagger.json
@@ -8,6 +8,9 @@
 		"schemas": {
 			"IPayment": {
 				"properties": {
+					"id": {
+						"type": "string"
+					},
 					"cardNumber": {
 						"type": "string"
 					},
@@ -28,6 +31,7 @@
 					}
 				},
 				"required": [
+					"id",
 					"cardNumber",
 					"cvv",
 					"placeHolderName",
@@ -39,6 +43,9 @@
 			},
 			"IUser": {
 				"properties": {
+					"id": {
+						"type": "string"
+					},
 					"email": {
 						"type": "string"
 					},
@@ -69,6 +76,7 @@
 					}
 				},
 				"required": [
+					"id",
 					"email",
 					"firstName",
 					"lastName",
@@ -87,6 +95,231 @@
 	},
 	"openapi": "3.0.0",
 	"paths": {
+		"/api/certification/get-all": {
+			"get": {
+				"operationId": "GetAllCertifications",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Certification"
+				],
+				"security": [],
+				"parameters": []
+			}
+		},
+		"/api/certification/create": {
+			"post": {
+				"operationId": "CreateCertification",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Certification"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {}
+						}
+					}
+				}
+			}
+		},
+		"/api/certification/delete/{id}": {
+			"delete": {
+				"operationId": "DeleteCertification",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Certification"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/api/course/get-all": {
+			"get": {
+				"operationId": "GetAllCourses",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Course"
+				],
+				"security": [],
+				"parameters": []
+			}
+		},
+		"/api/course/create": {
+			"post": {
+				"operationId": "CreateCourse",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Course"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {}
+						}
+					}
+				}
+			}
+		},
+		"/api/course/update/{id}": {
+			"put": {
+				"operationId": "UpdateCourse",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Course"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {}
+						}
+					}
+				}
+			}
+		},
+		"/api/course/delete/{id}": {
+			"delete": {
+				"operationId": "DeleteCourse",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Course"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/api/createData/create": {
+			"post": {
+				"operationId": "CreateUser",
+				"responses": {
+					"204": {
+						"description": "No content"
+					}
+				},
+				"tags": [
+					"Create Data"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"multipart/form-data": {
+							"schema": {
+								"type": "object",
+								"properties": {
+									"file": {
+										"type": "string",
+										"format": "binary"
+									}
+								},
+								"required": [
+									"file"
+								]
+							}
+						}
+					}
+				}
+			}
+		},
 		"/api/payment/get-all": {
 			"get": {
 				"operationId": "GetAllPayments",
